--- a/index.html
+++ b/index.html
@@ -440,27 +440,27 @@
             <h3>Current Team</h3>
             <div class="people">
                 <div class="person">
-                    <img class="avatar" src="" alt="Portrait of Reza Akhavian" />
+                    <img class="avatar" src="assets/people/Reza.jpg" alt="Portrait of Reza Akhavian" />
                     <div class="name">Dr Reza Akhavian</div>
                     <div class="role">Associate Professor at SDSU</div>
                 </div>
                 <div class="person">
-                    <img class="avatar" src="assests/people/Mani_4987.jpg" alt="Portrait of Mani Amani" />
+                    <img class="avatar" src="assets/people/Mani_4987.jpg" alt="Portrait of Mani Amani" />
                     <div class="name">Mani Amani</div>
                     <div class="role">Ph.D. Student</div>
                 </div>
                 <div class="person">
-                    <img class="avatar" src="assests/people/Johannes_MOOTZ_03_R3400_2.jpg" alt="Portrait of Johannes Mootz" />
+                    <img class="avatar" src="assets/people/Johannes_MOOTZ_03_R3400_2.jpg" alt="Portrait of Johannes Mootz" />
                     <div class="name">Johannes Mootz</div>
                     <div class="role">Ph.D. Student</div>
                 </div>
                 <div class="person">
-                    <img class="avatar" src="assests/people/RobertAshe.jpg" alt="Portrait of Robert Ashe" />
+                    <img class="avatar" src="assets/people/RobertAshe.jpg" alt="Portrait of Robert Ashe" />
                     <div class="name">Robert Ashe</div>
                     <div class="role">Master's Student</div>
                 </div>
                 <div class="person">
-                    <img class="avatar" src="assests/people/Behrad_25-03-22_21-10-56-508.jpg" alt="Portrait of Behrad Beheshti" />
+                    <img class="avatar" src="assets/people/Behrad_25-03-22_21-10-56-508.jpg" alt="Portrait of Behrad Beheshti" />
                     <div class="name">Behrad Beheshti</div>
                     <div class="role">Undergraduate Student</div>
                 </div>
