--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>DiCE Research Lab — SDSU</title>
     <meta name="description" content="Data-informed Construction Engineering (DiCE) at SDSU. Construction & Civil Engineering research in Robotics, AI, and Data Analytics." />
-    <link rel="icon" href="/assets/favicon.png" />
+    <link rel="icon" href="/assets/DiceLabLogo.png" />
     <style>
         /* --- theme variables --- */
         :root {
@@ -358,11 +358,13 @@
         <section id="research-areas">
             <div class="container">
                 <h3>Research Areas</h3>
-                <p class="sub">Automation and Robotics  · Data Analytics · Simulation & Digital Twins</p>
+                <p class="sub">Robotics  · Artificial Intelligence · Construction Automation · Adaptive Control · Worker-Robot Interaction</p>
                 <div class="grid-3">
-                    <div class="tile"><h4>Automation and Robotics</h4><p>UAVs/drones and robots for sustainability, resiliency, and energy efficiency of the built environment.</p></div>
-                    <div class="tile"><h4>Data Analytics </h4><p>Wearable sensors, MEMS sensors, EMG Biomechanics, machine learning for safety, health, and productivity improvement in construction.</p></div>
-                    <div class="tile"><h4>Simulation & Digital Twins</h4><p>Integrating BIM, sensor data, stochastic simulation to support real‑time decision‑making, and visualization of engineering processes through process mining and Building Information Modeling.</p></div>
+                    <div class="tile"><h4>Robotics</h4><p>Developing mobile and field robotic systems for construction and infrastructure projects that can perceive, navigate, and operate safely in complex environments.</p></div>
+                    <div class="tile"><h4>Artificial Intelligence </h4><p>Using computer vision, machine learning, and data analytics to interpret construction data, enhance decision-making, and enable intelligent automation.</p></div>
+                    <div class="tile"><h4>Construction Automation</h4><p>Designing automated systems that improve productivity, safety, and quality through advanced sensing, digital modeling, and autonomous control.</p></div>
+                    <div class="tile"><h4>Adaptive Control</h4><p>Creating control algorithms that allow robotic and automated systems to respond effectively to changes in environment, load, or task conditions.</p></div>    
+                    <div class="tile"><h4>Worker-Robot Interaction</h4><p>Studying and developing methods that enable intuitive and safe collaboration between human workers and robots on dynamic construction sites.</p></div>
                 </div>
             </div>
         </section>
@@ -413,7 +415,7 @@
 
         <section id="publications">
             <div class="container">
-                <h3>Selected Publications</h3>
+                <h3>Latest Publications</h3>
                 <ol>
                     <li class="pub">
                         S. Ergan, M. Sujon, F. Dai, E. Du, R. Akhavian, and A. Behzadan, “To-Practice Drivers and Barriers: Visualization, Information Modeling, and Simulation Technologies in AEC/FM,” <em>Journal of Computing in Civil Engineering</em>, vol. 40, no. 1, 04025128, 2026.
@@ -497,7 +499,6 @@
                 <aside class="tile">
                     <h4>Lab Address</h4>
                     <p>5500 Campanile Drive, Education 100K<br />San Diego, CA 92182</p>
-                    <p><strong>Follow</strong><br /><a href="https://dice.sdsu.edu/">DiCE @ SDSU</a></p>
                 </aside>
             </div>
         </section>
@@ -511,4 +512,5 @@
     <script>document.getElementById('year').textContent = new Date().getFullYear()</script>
 </body>
 </html>
+
 
