--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         <div class="container">
             <nav class="nav" aria-label="primary">
                 <div class="brand">
-                    <div class="logo" aria-hidden="true"></div>
+                    <img class="logo-img" src="assets/DiceLabLogo.png" alt="DiCE Lab Logo">
                     <h1>DiCE Research Lab · SDSU</h1>
                 </div>
                 <ul class="menu">
@@ -512,6 +512,7 @@
     <script>document.getElementById('year').textContent = new Date().getFullYear()</script>
 </body>
 </html>
+
 
 
 
