--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                         J. Mootz and R. Akhavian, “Advancing Accessible Hand-Arm Vibration Safety Monitoring: ISO-Compliance with Wearable Sensors and Transfer Functions,” <em>arXiv preprint</em> arXiv:2509.16536, 2025.
                     </li>
                 </ol>
-                <p class="sub">Browse more at <a href="https://scholar.google.com/citations?hl=en&user=EVC47ZUAAAAJ&view_op=list_works&sortby=pubdate">dice.sdsu.edu/publications</a>.</p>
+                <p class="sub">Browse more at <a href="https://scholar.google.com/citations?hl=en&user=EVC47ZUAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>.</p>
             </div>
         </section>
 
@@ -512,6 +512,7 @@
     <script>document.getElementById('year').textContent = new Date().getFullYear()</script>
 </body>
 </html>
+
 
 
 
