--- a/index.html
+++ b/index.html
@@ -73,14 +73,13 @@
             align-items: center
         }
 
-        .logo {
-            width: 38px;
-            height: 38px;
-            border-radius: 9px;
-            background: conic-gradient(from 210deg at 50% 50%, var(--red) 0 40%, #7c1222 40% 60%, var(--black) 60% 100%);
-            box-shadow: 0 0 0 2px rgba(255,255,255,.06) inset
+       .logo-img {
+          height: 40px;          /* Adjust as needed */
+          width: auto;           /* Keeps proportions */
+          border-radius: 6px;    /* Optional: soft corners */
+          margin-right: 10px;    /* Space between logo and text */
+          vertical-align: middle;
         }
-
         .brand h1 {
             margin: 0;
             font-size: 18px;
@@ -512,6 +511,7 @@
     <script>document.getElementById('year').textContent = new Date().getFullYear()</script>
 </body>
 </html>
+
 
 
 
