--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         <section class="hero">
             <div class="container">
                 <h2>Data‑informed Construction Engineering</h2>
-                <p>We focus on Construction & Civil Engineering with data‑driven, technology‑based solutions focusing on automation, visualization, robotics, and analytics to improve the design, construction, and management of civil infrastructure.</p>
+                <p>We advance Construction and Civil Engineering through fundamental and use-inspired interdisciplinary research in robotics, automation, and artificial intelligence to improve the design, construction, and management of civil infrastructure.</p>
             </div>
         </section>
 
@@ -523,6 +523,7 @@
     <script>document.getElementById('year').textContent = new Date().getFullYear()</script>
 </body>
 </html>
+
 
 
 
