--- a/reza-akhavian.html
+++ b/reza-akhavian.html
@@ -76,7 +76,7 @@
     <div class="container nav">
       <div class="brand">
         <a href="index.html" class="logo-link" aria-label="DiCE Lab Home">
-          <img class="logo-img" src="assests/DiceLabFullLogo.png" alt="DiCE Lab Full Logo" style="height:50px;width:auto;margin-right:12px;vertical-align:middle">
+          <img class="logo-img" src="assets/DiceLabFullLogo.png" alt="DiCE Lab Full Logo" style="height:50px;width:auto;margin-right:12px;vertical-align:middle">
         </a>
         <strong>DiCE Research Lab · SDSU</strong>
       </div>
@@ -144,4 +144,5 @@
     })();
   </script>
 </body>
+
 </html>
