Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
                     <div class="role">Undergraduate Student</div>
                 </div>
                 <div class="person">
-                    <div class="avatar" aria-hidden="true"></div>
+                    <img class="avatar" src="assets/people/Nhan.PNG" alt="Portrait of Nhan Nguyen" />
                     <div class="name">Nhan Nguyen</div>
                     <div class="role">Undergraduate Student</div>
                 </div>
@@ -639,3 +639,4 @@
   </script>
 </body>
 </html>
+
